# mousse

./: .gitignore  README.md  ROADMAP.md
0.1.0/: allwmake
0.1.0/applications/: allwmake
0.1.0/etc/: bashrc  controlDict
0.1.0/etc/case_dicts/: setConstraintTypes
0.1.0/etc/code_templates/: mousse-script
0.1.0/etc/config/: aliases.sh  cgal.sh  metis.sh  paraview-osx.sh  paraview.sh  scotch.sh  settings.sh  unset.sh
0.1.0/etc/thermo_data/: thermo_data
0.1.0/src/: allwmake  log.allwmake
0.1.0/src/combustion_models/: combustion_model.cpp  combustion_model.hpp  combustion_model_i.hpp  diffusion.cpp  diffusion.hpp  diffusions.cpp  fsd.cpp  fsd.hpp  fsd.ipp  fsds.cpp  laminar.cpp  laminar.hpp  (+30 more)
0.1.0/wmake/: make-wmake  makefile  makefile_apps  makefile_files  wclean  wclean-all  wclean-lninclude-all  wclean-machine  wdep  wmake  wmake-check-pwd  wmake-files-and-options  wmake-lninclude  wmake-lninclude-all  wmake-print-build  wrmdep  wrmdepold  wrmo
docs/: build.md  naming_scheme.md  snake_case.md  wmake.md
share/: cellModels
share/case_dicts/: foamyHexMeshDict  meshQualityDict
src/: CMakeLists.txt
src/mousse/: CMakeLists.txt
src/mousse/os_specific/posix/: CMakeLists.txt  allwmake  clock_time.cpp  cpu_time.hpp  file_monitor.cpp  file_monitor.hpp  mem_info.cpp  mem_info.hpp  sig_fpe.hpp  sig_write_now.hpp  timer.cpp  timer.hpp
src/mousse/os_specific/posix/_make/: files
utils/: absolute_include.py  align_continuations.py  dictionary_fixer.py  fix.sh  fix_include_guards.py  fixer.py  include_fixer.py  renamer.py  squizer.py  test.py  tutorial_fixer.py
(+17028 files in other folders)
